--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.2.17</version>
+        </dependency>
+
     </dependencies>
 
 
